Fix vertical alignment of pagination items

--- a/frontend/src/global_styles/content/_pagination.sass
+++ b/frontend/src/global_styles/content/_pagination.sass
@@ -47,6 +47,7 @@ $pagination--font-size: 0.8125rem
   &--items
     list-style-type: none
     display: flex
+    align-items: center
     margin: 0
     padding: 0
     font-size: $pagination--font-size
